syntax = "proto3";

package proto;

// Agent service definition
service AgentService {
    // kick user
    rpc KickUser(Agent.UserEntry) returns (Agent.Result);
}

message Agent {
    enum StatusCode {
        STATUS_OK = 0;
    }

    message Result {
        StatusCode status = 1;
        string msg = 2;
    }

    message UserEntry {
        fixed64 usn = 1;
    }
}
